fixed spacing issues in body

--- a/zorz.css
+++ b/zorz.css
@@ -279,7 +279,7 @@ h3, h4 {
 .side {
   flex: 30%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* Main column */
@@ -287,7 +287,7 @@ h3, h4 {
   position: relative;
   flex: 70%;
   background-color: white;
-  padding: 20px;
+  padding: 10px;
   min-height: 100%;
   height: 100%;
 }
@@ -332,7 +332,7 @@ font-family: "orbitron";
   height: 80%;
   */
   justify-content: center;
-  padding:4%;
+  padding: 14px 4%  4%  4%;
   border:4px ridge rgb(65, 65, 65);
 
 }
